// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BranchCoverage should render correctly 1`] = `
<div
  className="display-inline-flex-center"
>
  <CoverageRating
    size="small"
    value="95.9943"
  />
  <span
    className="little-spacer-left"
  >
    96.0%
  </span>
  <HelpTooltip
    className="little-spacer-left"
    overlay={
      <FormattedMessage
        defaultMessage="branches.measures.new_coverage.help"
        id="branches.measures.new_coverage.help"
        values={
          Object {
            "link": <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/component_measures",
                  "query": Object {
                    "id": "foo",
                    "metric": "new_coverage",
                    "pullRequest": "5",
                  },
                }
              }
            >
              layout.measures
            </Link>,
          }
        }
      />
    }
  />
</div>
`;

exports[`BranchDuplications should render correctly 1`] = `
<div
  className="display-inline-flex-center"
>
  <DuplicationsRating
    size="small"
    value={3.5}
  />
  <span
    className="little-spacer-left"
  >
    3.5%
  </span>
  <HelpTooltip
    className="little-spacer-left"
    overlay={
      <FormattedMessage
        defaultMessage="branches.measures.new_duplicated_lines_density.help"
        id="branches.measures.new_duplicated_lines_density.help"
        values={
          Object {
            "link": <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/component_measures",
                  "query": Object {
                    "id": "foo",
                    "metric": "new_duplicated_lines_density",
                    "pullRequest": "5",
                  },
                }
              }
            >
              layout.measures
            </Link>,
          }
        }
      />
    }
  />
</div>
`;

exports[`BranchMeasures should render correctly when coverage is missing 1`] = `
<div
  className="display-inline-flex-center"
>
  <BranchCoverage
    branchLike={
      Object {
        "base": "master",
        "branch": "feature-x",
        "key": "5",
        "title": "",
      }
    }
    componentKey="foo"
  />
  <BranchDuplications
    branchLike={
      Object {
        "base": "master",
        "branch": "feature-x",
        "key": "5",
        "title": "",
      }
    }
    className="big-spacer-left"
    componentKey="foo"
    measure={
      Object {
        "metric": "new_duplicated_lines_density",
        "periods": Array [
          Object {
            "index": 1,
            "value": "3.5",
          },
        ],
      }
    }
  />
</div>
`;

exports[`BranchMeasures should render coverage and duplications 1`] = `
<div
  className="display-inline-flex-center"
>
  <BranchCoverage
    branchLike={
      Object {
        "base": "master",
        "branch": "feature-x",
        "key": "5",
        "title": "",
      }
    }
    componentKey="foo"
    measure={
      Object {
        "metric": "new_coverage",
        "periods": Array [
          Object {
            "index": 1,
            "value": "95.9943",
          },
        ],
        "value": "0",
      }
    }
  />
  <BranchDuplications
    branchLike={
      Object {
        "base": "master",
        "branch": "feature-x",
        "key": "5",
        "title": "",
      }
    }
    className="big-spacer-left"
    componentKey="foo"
    measure={
      Object {
        "metric": "new_duplicated_lines_density",
        "periods": Array [
          Object {
            "index": 1,
            "value": "3.5",
          },
        ],
      }
    }
  />
</div>
`;
